apps/prod/pgadmin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-route
  namespace: prod
spec:
  parentRefs:
    - name: shared-gateway
      namespace: ingress-gateway
  hostnames:
    - "pgadmin.va1.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-pgadmin-pgadmin4
          port: 80
